@@ -45,7 +45,7 @@ public class FacetConstraint implements Constraint {
                             .collect(toList());
             return switch (constraints.size()) {
                 case 0 -> NoOpConstraint.instance;
-                case 1 -> constraints.get(0);
+                case 1 -> constraints.getFirst();
                 default -> AnyConstraint.any(constraints);
             };
         } else {
